--- a/creditsite/views/partials/header.pug
+++ b/creditsite/views/partials/header.pug
@@ -1,8 +1,9 @@
 .navbar.navbar-light.fixed-top.navbar-expand-lg
   .container
     a.navbar-brand(href='/')
-      i.fas.fa-cube
-      | Project name
+      span.logo
+      span.titleFlare Even 
+      | The Credit Score
     button.navbar-toggler(type='button', data-toggle='collapse', data-target='.navbar-collapse')
       span.sr-only Toggle navigation
       span.navbar-toggler-icon
@@ -10,8 +11,8 @@
       ul.nav.navbar-nav
         li.nav-item(class=(title === 'Home') ? 'active' : undefined)
           a.nav-link(href='/') Home
-        li.nav-item(class=(title === 'API Examples') ? 'active' : undefined)
-          a.nav-link(href='/api') API Examples
+        //- li.nav-item(class=(title === 'API Examples') ? 'active' : undefined)
+        //-   a.nav-link(href='/api') API Examples
         li.nav-item(class=(title === 'Contact') ? 'active' : undefined)
           a.nav-link(href='/contact') Contact
         li.nav-item(class=(title === 'Status') ? 'active' : undefined)
