--- a/creditsite/views/partials/footer.pug
+++ b/creditsite/views/partials/footer.pug
@@ -1,8 +1,9 @@
 footer
   .container.text-center
-    p.float-left © 2019 Company, Inc. All Rights Reserved
+    #disclaimer.float-left
+      div Credit Score components provided by Even Financial
+      div See a problem with your score? Contact Us!
+      div Your credit score is composed of several transparent elements. Each aspect and it's weight is displayed above.
     ul.float-right.list-inline
       li.list-inline-item
-        a(href='https://github.com/sahat/hackathon-starter') GitHub Project
-      li.list-inline-item
-        a(href='https://github.com/sahat/hackathon-starter/issues') Issues
+        a(href='https://github.com/gricha2380/defhackathon2019') GitHub Project
